[gd_scene load_steps=6 format=2]

[ext_resource path="res://Stuff/Button and Blocks.gd" type="Script" id=1]
[ext_resource path="res://Audio/UI Audio/switch25.ogg" type="AudioStream" id=2]
[ext_resource path="res://Tilesheet/platformPack_tilesheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 32 )

[node name="Button and Blocks" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="Push" type="AudioStreamPlayer2D" parent="Button"]
stream = ExtResource( 2 )

[node name="Unpressed" type="Sprite" parent="Button"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 768, 384, 64, 64 )

[node name="Pressed" type="Sprite" parent="Button"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 832, 384, 64, 64 )

[node name="ButtonCollision" type="CollisionShape2D" parent="Button"]
visible = false
position = Vector2( 32, 48 )
shape = SubResource( 1 )

[node name="Blocks" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 304, 0 )
rotation = 1.5708

[node name="Block" type="Sprite" parent="Blocks"]
position = Vector2( 0, 96 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 448, 64, 64, 64 )

[node name="Block2" type="Sprite" parent="Blocks"]
position = Vector2( 64, 96 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 448, 64, 64, 64 )

[node name="Block3" type="Sprite" parent="Blocks"]
position = Vector2( 128, 96 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 448, 64, 64, 64 )

[node name="Opened" type="Sprite" parent="Blocks"]
position = Vector2( 0, 96 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 576, 64, 64, 64 )

[node name="Opened2" type="Sprite" parent="Blocks"]
position = Vector2( 64, 96 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 576, 64, 64, 64 )

[node name="Opened3" type="Sprite" parent="Blocks"]
position = Vector2( 128, 96 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 576, 64, 64, 64 )

[node name="BlockCollision" type="CollisionShape2D" parent="Blocks"]
visible = false
position = Vector2( 96, 128 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Button" to="." method="_on_Button_body_entered"]
